## ① 整合SpringSession, + session完成共享问题； + 登录后，访问auth.gulimall.com/login.html能自动重定向到gulimall.com中； + 放大子域的作用域【详看GulimallSessionConfig.java】
## ② 补充页面效果
+ gulimall.com;item;search;等页面的session问题。
+ ”注册“；”访问login“等选项的src修正

--- a/笔记/业务/认证&登录.md
+++ b/笔记/业务/认证&登录.md
@@ -665,6 +665,10 @@ public class UserLoginVo {
       //远程登录
       R login = memberFeignService.login(vo);
       if(login.getCode() == 0){
+          //成功，获取用户名
+           MemberRespVo data = login.getData("data", new TypeReference<MemberRespVo>() {});
+            session.setAttribute(AuthServerConstant.lOGIN_USER,data);
+              login.getData("data",new TypeReference<MemberRespVo>(){});
           return "redirect:http://gulimall.com";
       }else {
           HashMap<String, String> errors = new HashMap<>();
@@ -689,7 +693,7 @@ public class UserLoginVo {
   
       MemberEntity entity = memberService.login(memBerLoginVo);
       if(entity!=null){
-          return R.ok();
+          return R.ok().setData(entity);
       }else {
        return R.error(BizCodeEnume.LOGINACCT_PASSWORD_INVAILD_EXCEPTION.getCode(), BizCodeEnume.LOGINACCT_PASSWORD_INVAILD_EXCEPTION.getMsg());
       }
@@ -729,10 +733,12 @@ public class UserLoginVo {
 
 ① 引入http工具类
 
+> 为了方便发送http请求，引不引入问题不大
+>
 > + HttpUtils请从
 >
 > https://github.com/aliyun/api-gateway-demo-sign-java/blob/master/src/main/java/com/aliyun/api/gateway/demo/util/HttpUtils.java下载
-> 
+>
 >
 >    * 相应的依赖请参照
 >
@@ -740,27 +746,236 @@ public class UserLoginVo {
 
 ② 创建OAuth2Controller做请求处理
 
-③ 创建ums_member_social_gitee表接收gitee社交登录的用户信息
+```java
+/**
+ * 社交登录请求
+ */
+@Slf4j
+@Controller
+public class OAuth2Controller {
 
-```sql
-create table ums_member_social_gitee
-(
-	 gitee_id			bigint not null auto_increment comment 'gitee表id',
-   social_uid              varchar(255) comment '社交登录用户的唯一id',
-   access_token            varchar(255) comment '令牌',
-   expires_in          varchar(255) comment '过期时间',
-   token_type			varchar(255) comment 'tocken类型',
-   refresh_token           bigint comment '刷新令牌',
-   primary key (gitee_id)
-);
-alter table ums_member_social_gitee comment '社交登录_gitee_用户信息';
+    @Autowired
+    private MemberFeignService memberFeignService;
+
+    @GetMapping("/oauth2.0/gitee/success")
+    public String gitee(@RequestParam("code") String code, HttpSession session) throws Exception {
+        Map<String, String> map = new HashMap();
+        map.put("client_id",client_id);
+        map.put("redirect_uri","http://auth.gulimall.com/oauth2.0/gitee/success");
+        map.put("client_secret",client_secret);
+        map.put("code",code);
+        map.put("grant_type","authorization_code");
+        //1.根据code换取access_token
+        HttpResponse response = HttpUtils.doPost("https://gitee.com", "/oauth/token", "post",  new HashMap<>(), map, new HashMap<>());
+
+        //2.处理响应回来的json串
+        if(response.getStatusLine().getStatusCode() == 200){
+            //获取access_token
+            String json = EntityUtils.toString(response.getEntity());
+            SocialUser socialUser = JSON.parseObject(json, SocialUser.class);
+            //远程调用member服务来处理用户信息注册、校验功能
+            R r = memberFeignService.oauth2Login(socialUser);
+            if(r.getCode()==0){
+                MemberRespVo data = r.getData("data", new TypeReference<MemberRespVo>() {
+                });
+                log.info("登录成功：用户信息为：{}"+data.toString());
+                //第一次使用session;命令浏览器保存JSESSIONID这个cookie,以后浏览器访问哪个网站就会带上这个网站的cookie
+                    //解决子域之间：gulimall.com -->auth.gulimall.com ; order.gulimall.com
+                    //要求：指定域名作用为父域名，即是是子域发的JSESSIONID，父域也可以使用其cookie信息【因为涉及到tomcat发的session,很麻烦，整合springSession来处理】
+                session.setAttribute("loginUser",data);
+               // 登录成功就跳回首页
+                return "redirect:http://gulimall.com";
+
+            }else {
+                return "redirect:http://auth.gulimall.com/login.html";
+            }
+
+        }else {
+            //失败重定向到登录页
+            return "redirect:http://auth.gulimall.com/login.html";
+        }
+    }
+}
+```
+
+③ 给表usm_member添加字段`social_id`,`access_token`,`expires_in`
+
+> 备注：正常逻辑，应该对每个授权应用做表单。但该练手项目为了避免麻烦，直接在usm_member表中添加social_id,access_token,expires_in三个字段【默认授权应用之间的用户id都不一样。】
+
+④ 远程调用member服务，做注册/登录用户功能
+
+```java
+//MemberController.java
+ /**
+     * 登录功能
+     * 【社交登录】
+     */
+    @PostMapping("/oauth2/login")
+    public R oauth2Login(@RequestBody SocialUser socialUser) throws Exception {
+
+        MemberEntity entity = memberService.login(socialUser);
+        if(entity!=null){
+            return R.ok().setData(entity);
+        }else {
+            return R.error(BizCodeEnume.LOGINACCT_PASSWORD_INVAILD_EXCEPTION.getCode(), BizCodeEnume.LOGINACCT_PASSWORD_INVAILD_EXCEPTION.getMsg());
+        }
+    }
+```
+
+```java
+//MemberServiceImpl.java
+@Override
+    public MemberEntity login(SocialUser socialUser) throws Exception {
+        //登录和注册合并逻辑
+            //备注：视频中“微博”社交不需要Access_token也可以获取用户uid，而gitee则需要再发带token请求
+        //2.1 查询当前社交用户的社交账号信息(uid,昵称，性别等)
+        Map<String, String> query = new HashMap<>();
+        query.put("access_token",socialUser.getAccess_token());
+        HttpResponse response = HttpUtils.doGet("https://gitee.com", "/api/v5/user", "get", new HashMap<String, String>(), query);
+        if(response.getStatusLine().getStatusCode() == 200){
+            String json = EntityUtils.toString(response.getEntity());
+            JSONObject jsonObject = JSON.parseObject(json);
+            String uid = jsonObject.get("id").toString();
+            //1.判断当前社交用户是否已经登陆过系统
+            MemberEntity memberEntity = this.baseMapper.selectOne(new QueryWrapper<MemberEntity>().eq("social_id", uid));
+            if(memberEntity !=null){
+                //1.用户有注册记录,更新信息
+                MemberEntity updateDate = new MemberEntity();
+                updateDate.setId(memberEntity.getId());
+                updateDate.setAccessToken(socialUser.getAccess_token());
+                updateDate.setExpiresIn(socialUser.getExpires_in());
+                //...其他的不重要，更不更新无所谓
+                memberDao.updateById(updateDate);
+
+                memberEntity.setAccessToken(socialUser.getAccess_token());
+                memberEntity.setExpiresIn(socialUser.getExpires_in());
+                return memberEntity;
+            }else{
+                //2.没有查到当前社交用户记录，就需要注册一个
+                MemberEntity register = new MemberEntity();
+                try{
+                        String name = jsonObject.get("name").toString();
+                        String email = jsonObject.get("email").toString();
+                        String socialId = jsonObject.get("id").toString();
+                    //.....等等信息
+                        register.setNickname(name);
+                        register.setEmail(email);
+                        register.setSocialId(socialId);
+                }catch (Exception e){
+                    /**
+                     * 远程查询昵称这些不重要的，即是出现问题也可以忽略
+                     */
+                }
+                register.setAccessToken(socialUser.getAccess_token());
+                register.setExpiresIn(socialUser.getExpires_in());
+                memberDao.insert(register);
+                return register;
+            }
+        }else {
+            throw new AccessTokenException(response.getStatusLine().getStatusCode(),response.getStatusLine().getReasonPhrase());
+        }
+
+    }
+
+```
+
+⑤ 页面渲染，发送请求
+
+```html
+<li>
+   <a href="https://gitee.com/oauth/authorize?client_id={gitee提供的client_id}
+   &redirect_uri=http://auth.gulimall.com/oauth2.0/gitee/success&response_type=code">
+      <img style="height: 18px;width: 18px" src="/static/login/JD_img/gitee-log.png" />
+      <span>gitee</span>
+   </a>
+</li>
 ```
 
 
 
+### SpringSession整合
 
+[spring官方文档](https://docs.spring.io/spring-session/reference/3.0/samples.html)
 
-## 知识
+#### 环境配置
+
+> :exclamation: 注意：无论子域服务还是父域服务，对于“环境配置”、"自定义SpringSession"都要做一遍。即auth-server服务要做以下环境配置，product服务也要做以下环境配置
+
++ 引入依赖
+
+  ```xml
+  <dependency>
+  		<groupId>org.springframework.session</groupId>
+  		<artifactId>spring-session-data-redis</artifactId>
+  </dependency>
+  ```
+
++ 配置redis控制session
+
+  详细查看文档
+
+  + 必须配置，可选择redis、mongodb......等
+
+  ```properties
+  spring.session.store-type=redis # 设置redis存储session
+  ```
+
+  + 选择配置
+
+    ```properties
+    server.servlet.session.timeout=30  # session过期时间
+    spring.session.redis.flush-mode=on_save # 刷新模式
+    spring.session.redis.namespace=spring:session # 存储会话的命名空间
+    ```
+
++ 配置redis连接
+
++ 主程序开启session-redis服务`@EnableRedisHttpSession `
+
+#### 自定义SpringSession
+
+> :exclamation:  存在两种问题，需要进行自定义化SpringSession :
+>
+> ① 默认发的令牌，作用域只是作用于当前域（即下面附录中Session共享问题的①）
+>
+> ② 使用JSON的序列化方式来序列化对象数据到redis中，方便观察
+
++ 通过暴露CookieSerializer，修改session的作用域
+
+  + 说明：session在服务间传输是存放在cookie中，所以可以在auth-server服务重定向到product服务前，将Cookie序列化器提前暴露从而操作session的`domain`
+
+    ```java
+    package com.atguigu.gulimall.auth.config;
+    @Configuration
+    public class GulimallSessionConfig {
+        @Bean
+        public CookieSerializer cookieSerializer(){
+            DefaultCookieSerializer cookieSerializer = new DefaultCookieSerializer();
+    
+            //放大子域的作用域
+            cookieSerializer.setDomainName(".gulimall.com");
+            //修改session名
+            cookieSerializer.setCookieName("GULISESSION");
+            return cookieSerializer;
+        }
+    ```
+
++ spring提供了redis序列化器
+
+  + 说明：在[官方源码中](https://github.com/spring-projects/spring-session/blob/3.0.3/spring-session-samples/spring-session-sample-boot-redis-json/src/main/java/sample/config/SessionConfig.java)演示了config是通过`RedisSerializer` bean来改变存储数据的json序列化
+
+    ```java
+    package com.atguigu.gulimall.auth.config;
+    @Configuration
+    public class GulimallSessionConfig {
+        @Bean
+    public RedisSerializer<Object> springSessionDefaultRedisSerializer() {
+       return new GenericJackson2JsonRedisSerializer();
+    }
+    }
+    ```
+
+## 附录
 
 ### OAuth2
 
@@ -769,3 +984,83 @@ alter table ums_member_social_gitee comment '社交登录_gitee_用户信息';
 oauth2认证流程：
 ![AOuth2认证流程](../image/AOuth2认证流程.png)
 
+### Session共享问题-session原理
+
+seesion原理：
+session是一种记录浏览器状态的机制。与cookie的区别在于，session是保存在服务器的内存中，cookie是保存在浏览器的内存中。
+
+**<font color=red>问题描述：</font>**
+
+分布式情况下，session会产生两种问题：
+
+①域名不同，服务不同，session无法共享（子域共享问题）
+
+> 场景描述：auth.gulimall.com/login.html发送社交登录请求，成功后跳转的页面为gulimall.com。域名改变，导致session无法共享
+
+② 复制多份服务，同个域名下session不同步的问题
+
+> 场景描述：同个域名，在分布式下，A服务复制多份（集群），B,C,D........ ，无同步到session信息，导致请求进来时，A服务存储了session了，而B其他服务没有
+
+**<font color=green>解决方案：</font>**
+
+针对问题① ，解决方案有：
+
++ 放大域名的作用域的范围
+
+  + 例如：auth.gulimall.com发送的授权登录请求，成功后跳转到gulimall.com。在cookie 中可以查看到auth.gulimall.com的JSESSIONID作用域只是限于自身，可修改重定向后域名的作用域范围为*.gulimall.com
+
+  > 备注：JSESSIONID即session，tomcat发的session都命名为JSESSIONID
+
+  + 解决方案：
+    因为第一次登录的session是由tomcat发的，而默认的作用域就是该域域名，修改起逻辑很麻烦，建议使用springSession框架整合处理。
+
+针对问题②，解决方案有：
+
++ hash一致性
+
+  + 特点：在负载均衡（nginx）中设置hash值，当同个用户访问，就通过hash值定点该用户只能访问某服务（存有该用户session的服务）
+
+  + 使用操作方案：
+
+    + 方案1：负载均衡服务做hash值分配 【四层业务代理ip_hash方案】
+
+    + 方案2：浏览器端分配session识别的id，再通过id在负载均衡服务中进行分配服务 【七层代理ip_hash方案】
+
+      > 备注：**四层**是指传输层，**七层**是指应用层。
+      > **四层**：根据用户ip+port来做hash
+      >
+      > **七层**：根据http协议中的某些属性来做hash（一般就URL的信息）
+
+  + 优点：
+
+    + 只需要改nginx配置，不需要修改应用代码
+    + 负载均衡，只要hash属性的值分布式是均匀的，多台web-server的负载是均衡的
+    + 可以支持web-server水平扩展（相比session同步而言）
+
+  + 缺点：
+
+    + session还是存在web-server中的，所以web-server重启或宕机等情况还是会导致部分session丢失，影响部分用户体验
+    + 如果web-server水平扩展，rehash后session重新分布，也会有一部分用户路由到不正确的服务中（不是存储该用户session的服务）
+
+  + 但是，以上缺点问题也不是很大，因为session本身是有有效期限，所以这种方案可以使用
+
++ 统一存储
+
+  + 特点：无论哪个服务器，都统一存储在一个地方【DB，redis等等】，一般存储在redis
+  + 优点：
+    + 可以水平扩展，数据库/缓存水平切分即可
+    + web-server重启、扩容都不会导致session丢失
+  + 不足：
+    + 增加了一次网络调用，并且需要修改应用代码【如将所有的getSession方法替换为从Redis查数据的方式，java的`StandardSession类`默认是从内存中获取session的】
+    + redis获取数据比直接在内存中获取要慢，且中间隔着redis，还要增加网络交互的过程
+  + 补充：针对上述不足，SpringSession是一种解决方案。
+
+### SpringSession核心原理
+
+@EnableRedisHttpSession 导入 RedisHttpSessionConfiguration 配置
+
+1. 给容器中添加了一个组件
+
+   RedisOperationsSessionRepository : redis操作session。session的增删改查
+
+2. 
